--- a/mp3/package.json
+++ b/mp3/package.json
@@ -4,46 +4,29 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
-    "eslint-loader": "^4.0.2",
     "gltf-loader": "^0.1.0",
     "gsap": "^3.5.1",
     "http-server": "^0.12.3",
+    "pixi.js": "^4.8.7",
     "readline": "^1.3.0",
     "sass": "^1.30.0",
+    "sass-loader": "^10.1.1",
     "three-gltf-loader": "^1.111.0",
     "three-js": "^79.0.0",
     "three-orbitcontrols": "^2.110.3",
+    "threejs-orbit-controls": "^1.0.3",
     "vue": "^2.6.11",
     "vue-fractals": "0.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
